--- a/TransManage_frontend/src/Components/Dashboard/Sidebar/Sidebar.css
+++ b/TransManage_frontend/src/Components/Dashboard/Sidebar/Sidebar.css
@@ -3,6 +3,7 @@
   background-color: #22223B;
   color: white;
   padding: 1rem;
+  height: 100vh;
 }
 
 .sidebar nav {
